--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--Problem #1--Make an HTML file-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,11 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="scripts.js"> </script>
+    <script src="scripts.js"> </script> <!--Add script tag to head-->
 </head>
 <body>
+<!--Problem #10--Add a button, give the button text that says
+"Click to add new list item", give the button a class name.-->
+    <button id="great-button" onclick="click",function()">Click to add new list item</button>
+   <ul>
 
-    <button class="great-button">Click to add new list item</button>
-    
+   </ul> 
 </body>
 </html>
